fixed about page spacing

--- a/src/Cure/client/main.css
+++ b/src/Cure/client/main.css
@@ -1186,18 +1186,35 @@ li.private {
     justify-content: center;
 }
 
-.about h3 {
+.about {
     width: 100%;
     position: relative;
     box-sizing: border-box;
     display: flex;
-    font-size: 16px;
-    margin-top: 70%;
+    /* font-size: 16px; */
+    margin-top: 5%;
     margin-bottom: auto;
     margin-left: auto;
     margin-right: auto;
     justify-content: center;
 }
+.aboutContainer{
+    box-align: start;
+    font-size: .4em;
+    width: 90%;
+    height: 40%;
+    margin-top: 40%;
+    margin-bottom: auto;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    border-spacing: 1px;
+    border: 0;
+    /*box-shadow: 0px 3px 5px;*/
+    position: relative;
+  }
 
 .theme {
     margin-top: auto;
@@ -1460,12 +1477,14 @@ background-color: white;
 
 /*---------------------------------------------------------------------------------------------*/
 .textA{
+    margin-top: 30px;
     color:white;
-    font-size: 23px;
+    font-size: 20px;
     margin-right:auto;
     margin-left:auto;
     background-color: rgba(0,0,0,0.5);
 }
+
 .sec_dropdown {
     position: relative;
 }
